tests/pass/no_space_binary_ops.kr
// Operators must tokenize correctly with no whitespace around them;
// previously the '-' was swallowed by the integer literal.
fn inisiu() {
    nter x = 10;
    konfirma(5-3 == 2);
    konfirma(x-1 == 9);
    konfirma(x--1 == 11);
    konfirma(2*-3 == -6);
    konfirma(1+2*3 == 7);
    num f = 2.5-0.5;
    konfirma(f == 2.0);
}
