tests/fail/fail_repeat_initializer_multiple_elements.kr
fn inisiu() {
    nter [6]a = [1, 2] * 3;
    mostran(a[0]);
}
